@@ -33,6 +33,8 @@ GNUTLS_REQUIRED=0.8.9
 AC_SUBST(GLIB2_REQUIRED)
 AC_SUBST(GNUTLS_REQUIRED)
 
+LM_CHECK_TIMEZONE
+
 PKG_CHECK_MODULES(LOUDMOUTH, glib-2.0 >= $GLIB2_REQUIRED)
 
 dnl +--------------------+
