@@ -1,3 +1,13 @@
+2004-01-08  Richard Hult  <richard@imendio.com>
+
+	* loudmouth/lm-connection.c (connection_timeout_check_open):
+	Remove debug output.
+
+	* acinclude.m4: Add gmtoff check.
+
+	* loudmouth/lm-utils.c (lm_utils_get_localtime): Use tm_gmtoff if
+	available.
+
 2004-01-06  Mikael Hallendal  <micke@imendio.com>
 
 	* loudmouth/lm-connection.c:
